# flight-booking-api

./: .gitignore  README.md  alembic.ini  auth.py  database.py  main.py  models.py  pyproject.toml  schemas.py
alembic/: env.py
alembic/versions/: e324b9fa2421_add_flight_booking_table.py
routes/: booking.py  flight.py  user.py
